Borrow book method added to Student
